# stock

./: .gitignore  CLAUDE.md  README.md  ab.yaml  ab.yaml.example  ab_mcap.yaml  ab_neutralize.yaml  ab_neutralize_confirm.yaml  ab_orthogonalize.yaml  ab_preprocess.yaml  ab_rust_selection.yaml  ab_sizing.yaml  config.yaml  config_eval48.yaml  portfolio_ab.yaml.example  portfolio_ab_factor_compare.yaml  portfolio_ab_mask.yaml  portfolio_ab_mask_base.yaml  portfolio_ab_mask_medium.yaml  portfolio_ab_mask_medium_base.yaml  portfolio_ab_rust_selection.yaml  portfolio_ab_simple.yaml  portfolio_ab_simple_base.yaml  pyproject.toml  requirements.txt
data/: fundamentals_balance.parquet  fundamentals_cash_flow.parquet  fundamentals_dupont.parquet  fundamentals_growth.parquet  fundamentals_profit.parquet  mcap_shares.parquet
data_small/: .data_source  000001_daily.parquet  000002_daily.parquet  000006_daily.parquet  000007_daily.parquet  000008_daily.parquet  000009_daily.parquet  000011_daily.parquet  000012_daily.parquet  000014_daily.parquet  000017_daily.parquet  000019_daily.parquet  000020_daily.parquet  000021_daily.parquet  000025_daily.parquet  000026_daily.parquet  000027_daily.parquet  000028_daily.parquet  000029_daily.parquet  000030_daily.parquet  000031_daily.parquet  000032_daily.parquet  000034_daily.parquet  000035_daily.parquet  000036_daily.parquet  000037_daily.parquet  000039_daily.parquet  000042_daily.parquet  (+21 more)
rust/stockpool_ops/: Cargo.toml  pyproject.toml
rust/stockpool_ops/src/: cs.rs  decay.rs  lib.rs  rolling.rs  stack.rs  util.rs
(+406 files in other folders)
