[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stockpool"
version = "0.1.0"
description = "A-share dragon-pool technical signal analyzer"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.12",
    "mootdx>=0.11",
    "baostock>=0.8",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "pyecharts>=2.0",
    "pyyaml>=6.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
]

[project.scripts]
stockpool = "stockpool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
